clusters/main/kubernetes/flux-system/webhooks/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
      cert-manager.io/cluster-issuer: cloudflare
      cert-manager.io/private-key-rotation-policy: Always
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd
      traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: external
  rules:
  - host: webhook.${DOMAIN_1}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - hosts:
      - webhook.${DOMAIN_1} 
      secretName: cloudflare
